add screencasts 4 5 6 to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@ data2/
 .DS_Store
 src/.ipynb_checkpoints/
 src/__pycache__/
+img/tc_screencasts4.png
+img/tc_screencasts5.png
+img/tc_screencasts6.png
