--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,16 @@ img/tc_screencasts4.png
 img/tc_screencasts5.png
 img/tc_screencasts6.png
 img/sparklines/
+data_june/
+data_january/
+jupyter\ 2.svg
+img/Mossy.jpeg
+img/Mossy_only_closer.jpeg
+img/jupyter 2.svg
+img/jupyter.png
+img/jupyter.svg
+img/numpy.png
+img/numpy.svg
+img/matt-damon-best-movies-tv-shows.jpg
+matt-damon.jpg
+img/Webpage.png
