--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,15 @@ data2/
 src/.ipynb_checkpoints/
 src/__pycache__/
 img/sparklines/
+data_january/
+data_june/
+img/Mossy.jpeg
+img/Mossy_only_closer.jpeg
+img/jupyter 2.svg
+img/jupyter.png
+img/jupyter.svg
+img/matt-damon-best-movies-tv-shows.jpg
+img/matt-damon.jpg
+img/numpy.png
+img/numpy.svg
+img/python.png
