--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ img/tc_screencasts2.png
 img/tc_screencasts4.png
 img/tc_screencasts5.png
 img/tc_screencasts6.png
+img/tc_screencast9_fast.mp4
 img/jupyter\ 2.svg
 img/jupyter 2.svg
 img/jupyter.png
